--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ html {
     overflow-x: hidden;
 }
 body{font-family: 'Raleway', sans-serif;
-  font-size: 14px;
+  font-size: 15px;
   line-height: 1.5;
   padding: 0px; margin: 0px;
   }
@@ -46,20 +46,26 @@ body{font-family: 'Raleway', sans-serif;
 
 
 input{
+    box-shadow: rgba(87, 87, 87, 0.2) 0px 0px 12px 1px;
+
   width:80%;
   margin:3px 0px;
   padding:auto;
   align-content: center;
   height: 30px;
   border: 1px solid #fff;
-  text-align:center
+  text-align:center;
+    border-radius: 5px;
+
 }
 button{
+    box-shadow: rgba(87, 87, 87, 0.2) 0px 0px 12px 1px;
+
   width:80%;
   margin:3px 0px;  
   padding:auto;
   align-content: center;
-  border-radius: 2px;
+  border-radius: 5px;
 }
 
 
@@ -120,7 +126,7 @@ header .highlight, header .current a{ color: #e8491d;
 
   /*showcase*/
   
-#showcase {min-height: 400px;
+#showcase {min-height: 420px;
   /*background: url("images/cloud2.jpg") no-repeat 0 -800px;*/
   background-image: url(cloud3.jpg);
   background-position:fixed;
@@ -171,7 +177,7 @@ border: 0px;
 padding-left: 20px;
 padding-right: 20px;
 color: #ffffff;
-font-family:cursive;}
+}
 
 /*boxes*/
 
@@ -346,7 +352,7 @@ margin-bottom: 5px;}
 
         <br><br>
 
-        <img src="images/image1.png" width="100%" t="">
+        <img src="image1.png" width="100%" t="">
 <center> <p>Figure 1: Illustration of WRF-Hydro model system</p> </center>
         <p>When run in an offline or &lsquo;uncoupled&rsquo; mode, WRF-Hydro must read in the meteorological forcing
             data
@@ -534,7 +540,7 @@ margin-bottom: 5px;}
 
 
 
-        <img src="images/image2.jpg" width="100%" t="">
+        <img src="image2.jpg" width="100%" t="">
 
         <p>Figure 2: Map of Nigeria showing the different River Basin development authorities</p>
         <p>&nbsp;</p>
