--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <style>
         @media(max-width:520px) {
             body {
-                display: none;
+                display: block;
             }
 
             header nav {
